tests/integration/schema/snapshots/main__integration__schema__search__include_deprecated_surfaces_deprecated_members.snap
---
source: tests/integration/schema/search.rs
assertion_line: 105
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "guest",
    "results": [
      {
        "coordinate": "Role.GUEST",
        "kind": "enum_value",
        "description": null,
        "via": []
      }
    ],
    "success": true
  },
  "error": null
}
