tests/integration/schema/snapshots/main__integration__schema__search__include_deprecated_surfaces_deprecated_members_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 213
expression: text
---
1 result for "guest"

Role.GUEST
  enum value
