tests/integration/schema/snapshots/main__integration__schema__search__limit_caps_result_count.snap
---
source: tests/integration/schema/search.rs
assertion_line: 112
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "post",
    "results": [
      {
        "coordinate": "CreatePostInput",
        "kind": "type",
        "description": null,
        "via": []
      },
      {
        "coordinate": "Mutation.createPost",
        "kind": "field",
        "description": "Create a new post",
        "via": []
      }
    ],
    "success": true
  },
  "error": null
}
