tests/integration/schema/snapshots/main__integration__schema__search__limit_caps_result_count_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 219
expression: text
---
2 results for "post"

CreatePostInput
  type

Mutation.createPost — Create a new post
  field
