tests/integration/schema/snapshots/main__integration__schema__search__multi_term_match_requires_all_terms.snap
---
source: tests/integration/schema/search.rs
assertion_line: 59
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "create post",
    "results": [
      {
        "coordinate": "CreatePostInput",
        "kind": "type",
        "description": null,
        "via": []
      },
      {
        "coordinate": "Mutation.createPost",
        "kind": "field",
        "description": "Create a new post",
        "via": []
      }
    ],
    "success": true
  },
  "error": null
}
