tests/integration/schema/snapshots/main__integration__schema__search__multi_term_match_requires_all_terms_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 177
expression: text
---
2 results for "create post"

CreatePostInput
  type

Mutation.createPost — Create a new post
  field
