tests/integration/schema/snapshots/main__integration__schema__search__no_matches_returns_empty_results.snap
---
source: tests/integration/schema/search.rs
assertion_line: 140
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "xyzzy",
    "results": [],
    "success": true
  },
  "error": null
}
