tests/integration/schema/snapshots/main__integration__schema__search__no_matches_returns_empty_results_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 245
expression: text
---
No results for "xyzzy"
