tests/integration/schema/snapshots/main__integration__schema__search__stem_match_finds_via_english_stemming.snap
---
source: tests/integration/schema/search.rs
assertion_line: 67
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "creating",
    "results": [
      {
        "coordinate": "CreatePostInput",
        "kind": "type",
        "description": null,
        "via": []
      },
      {
        "coordinate": "Mutation.createPost",
        "kind": "field",
        "description": "Create a new post",
        "via": []
      }
    ],
    "success": true
  },
  "error": null
}
