tests/integration/schema/snapshots/main__integration__schema__search__stem_match_finds_via_english_stemming_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 183
expression: text
---
2 results for "creating"

CreatePostInput
  type

Mutation.createPost — Create a new post
  field
